clang/test/BSC/Negative/Ownership/Owned/owned_funcPtr/owned_funcPtr.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

int myadd(int* a, int* b) {
    return *a + *b;
}

int _Owned myadd2(int* a, int* b) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned x = 10; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return x;
}

typedef int (*FTP)(int*, int*);
typedef int (*FTPO)(int* _Owned, int*);

//case1: callExpr through funcPtr
void test1() {
    FTP ftp1 = myadd;
    int a = 10;
    int b = 10;
    int* _Owned p1 = __take_from_raw(&a);
    int* p2 = &b;
    int res = ftp1(p1, p2); //expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'int *'}}
}

// case2: unOwned to _Owned
void test2() {
    FTP _Owned ftp1 = myadd; //expected-error {{type of 'FTP' (aka 'int (*)(int *, int *)') cannot be qualified by '_Owned'}}
}

// case3: inner _Owned check
void test3() {
    FTP ftp1 = myadd;
    FTP ftp2 = myadd2;  //expected-error {{cannot cast 'FTP' (aka 'int (*)(int *, int *)') to '_Owned int (int *, int *)'}}
    FTPO ftpo1 = ftp1;  //expected-error {{cannot cast 'FTPO' (aka 'int (*)(int *_Owned, int *)') to 'FTP' (aka 'int (*)(int *, int *)')}}
    FTPO ftpo2 = (FTPO)ftp1;
}

// case4: no _Owned-like property
FTPO ftpo1; //legal even FTPO contains _Owned
